--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,11 +12,28 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:background="#000000"
+            android:textAlignment="center"
+            app:titleTextColor="@android:color/white"
+            app:subtitleTextColor="@android:color/white"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="?attr/actionBarTheme"
+            app:title="Waves"
+            android:gravity="center_horizontal"
+            app:subtitle="Embrace the Shadows"
+            />
+
         <FrameLayout
             android:id="@+id/main_activity_frame_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:animateLayoutChanges="true"
+            android:animateLayoutChanges="false"
             android:layout_weight="10"/>
 
         <FrameLayout
@@ -24,7 +41,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/main_activity_secondary_frame_layout"
             android:visibility="gone"
-            android:animateLayoutChanges="true"
+            android:animateLayoutChanges="false"
             android:layout_weight="10"/>
 
         <android.support.design.widget.BottomNavigationView
