--- a/app/src/main/res/layout/fragment_events.xml
+++ b/app/src/main/res/layout/fragment_events.xml
@@ -1,33 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="false"
+    android:orientation="vertical">
 
-    <LinearLayout
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_marginTop="25dp">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="25sp"
-            android:text="@string/item_1"
-            android:textAlignment="center"/>
+        android:layout_height="wrap_content"
+        android:textSize="25sp"
+        android:text="@string/item_1"
+        android:textAlignment="center"
+        android:id="@+id/textview_events" />
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/viewpager_events_fragment"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_gravity="bottom"
-            android:clipToPadding="false"
-            android:overScrollMode="never"
-            android:paddingStart="60dp"
-            android:paddingEnd="60dp"/>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager_events_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_gravity="bottom"
+        android:clipToPadding="false"
+        android:overScrollMode="never"
+        android:paddingTop="60dp" />
 
-    </LinearLayout>
-
-
-
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
