Added SpotOn (Basic)

--- a/app/src/main/res/layout/fragment_events_simple.xml
+++ b/app/src/main/res/layout/fragment_events_simple.xml
@@ -1,12 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/back">
+
+    <TextView
+        android:id="@+id/fragment_events_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="30dp"
+        android:text="@string/item_1"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
+        android:textSize="45sp"
+        />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/events_fragment_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"/>
+        android:layout_margin="20dp"
+        android:orientation="vertical"
+        android:layout_below="@+id/fragment_events_title"/>
 
-</LinearLayout>
+</RelativeLayout>
