--- a/app/src/main/res/layout/item_events_rv.xml
+++ b/app/src/main/res/layout/item_events_rv.xml
@@ -4,14 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="25dp">
+    android:padding="10dp">
 
     <ImageView
         android:id="@+id/events_rv_item_imageview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/favicon"
-        android:padding="25dp"/>
+        android:src="@drawable/ic_hand"
+        android:layout_margin="25dp" />
 
     <TextView
         android:id="@+id/events_rv_item_title"
@@ -20,7 +20,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:gravity="center_horizontal"
-        android:padding="25dp"/>
+        android:gravity="center_horizontal" />
 
 </LinearLayout>
