--- a/app/src/main/res/layout/item_spoton_rv.xml
+++ b/app/src/main/res/layout/item_spoton_rv.xml
@@ -1,17 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:layout_margin="20dp"
+    android:backgroundTint="@android:color/white"
+    android:foregroundTint="@android:color/white"
+    android:backgroundTintMode="multiply">
 
     <TextView
         android:id="@+id/spoton_rv_item_eventname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="EventName"/>
+        android:text="EventName"
+        android:textSize="25sp"/>
     <TextView
         android:id="@+id/spoton_rv_item_data"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Data"/>
+        android:text="Data"
+        android:textSize="20sp"/>
 
 </LinearLayout>
