--- a/app/src/main/res/menu/bottom_navigation_items.xml
+++ b/app/src/main/res/menu/bottom_navigation_items.xml
@@ -3,14 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/bottom_nav_events"
-        android:icon="@drawable/ic_events"
+        android:icon="@drawable/ic_events_icon"
         android:title="@string/item_1"/>
     <item
+        android:id="@+id/bottom_nav_voting"
+        android:icon="@drawable/ic_winners_icon"
+        android:title="@string/item_2"/>
+    <item
         android:id="@+id/bottom_nav_home"
-        android:icon="@drawable/ic_stat_name"
+        android:icon="@drawable/ic_home_icon"
         android:title="@string/item_3"/>
     <item
-        android:id="@+id/bottom_nav_spoton"
-        android:icon="@drawable/ic_fire"
-        android:title="@string/item_2"/>
+        android:id="@+id/bottom_nav_live"
+        android:icon="@drawable/ic_live"
+        android:title="@string/item_4"/>
+    <item
+        android:id="@+id/bottom_nav_winners"
+        android:icon="@drawable/ic_winners_icon"
+        android:title="@string/item_5"/>
 </menu>
